1998-12-09  Tsukamoto Tetsuo  <czkmt@remus.dti.ne.jp>

	* lisp/gnus-offline.el (gnus-offline-after-jobs-done): Don't call
	`gnus-offline-agent-expire' under XEmacs.

1998-12-08  Katsumi Yamaoka   <yamaoka@jpl.org>

	* texi/gnus-ja.texi: Fix latin chars.
	* texi/gnus.texi: Ditto.

	* texi/ChangeLog: Shrunk.

	* text/widget.texi: Removed.
	* texi/custom.texi: Removed.

	* lisp/ChangeLog: Fix latin chars.

	* lisp/pop3.el (pop3-open-server): Use
	`open-network-stream-as-binary' instead of `open-network-stream'.
	* lisp/nntp.el (nntp-open-network-stream): Ditto.
	* lisp/gnus-gl.el (bbb-connect-to-bbbd): Ditto.

	* lisp/nntp.el (nntp-open-rlogin): Enclose `start-process' with
	`as-binary-process'.
	(nntp-open-telnet): Ditto.

	* lisp/nntp.el (nntp-coding-system-for-write): Abolished.
	(nntp-coding-system-for-read): Abolished.

	* lisp/nndb.el: Don't require `tcp'.

1998-12-07  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/message.el (message-get-parameter-with-eval): Call
	`message-get-parameter' with arg `key' first.

1998-12-07  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/gnus.el (gnus-version-number): Update to 6.10.050.

	* Sync up with Pterodactyl Gnus 0.65.

1998-12-06  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>

	* lisp/message.el (message-cite-original-without-signature): Do
	not use mml-quote-region.

	* lisp/message.el (message-cite-original): Ditto.

	* lisp/gnus.el (gnus-version-number): Update to 6.10.049.

	* Sync up with Pterodactyl Gnus 0.64.

1998-12-04  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/gnus-sum.el (gnus-summary-show-article): Don't use
	`mm-destroy-parts'.

1998-12-04  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>

	* lisp/gnus.el (gnus-version-number): Update to 6.10.048.

	* Sync up with Pterodactyl Gnus 0.63.

1998-12-04  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>

	* lisp/gnus.el (gnus-version-number): Update to 6.10.047.

	* Sync up with Pterodactyl Gnus 0.62.

	* README.ichikawa: Add description of required APEL/FLIM/SEMI.
